--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Galada" type="text/css" rel="stylesheet">   
-    `<meta charset="utf-8">
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+    </style><style>
+    @import url('https://fonts.googleapis.com/css?family=Galada');
+    </style>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
